add pagination for getAllAthletes endpoint response